--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   </head>
   <body>
 
-    <h1>Company Inc.</h1>
-    <h2>For all your incorporated company needs</h2>
+    <h1>Walkies Inc.</h1>
+    <h2>We are surrounded by parkland for your dog</h2>
 
-    <!-- Create an iframe tag-->
-
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d6299.22909268444!2d144.7905167440198!3d-37.86930851383775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sau!4v1628056365981!5m2!1sen!2sau" width="100%" height="400" style="border: 1px;;" allowfullscreen="" loading="lazy"></iframe>
   </body>
 </html>
